# validate_email

./: pyproject.toml  validate_email.py
