[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "validate_email"
version = "1.3"
authors = [
    { name = "Syrus Akbary", email = "me@syrusakbary.com" },
]
maintainers = [
    { name = "Wereii", email = "me+py@wereii.cz" }
]
description = "validate_email verifies if an email address is valid and really exists."
readme = "README.rst"
license = { file = "LICENSE" }  # LGPL
keywords = ["email", "validation", "verification", "mx", "verify"]
classifiers = [
    "Topic :: Communications :: Email",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)"
]

[project.urls]
Home = "https://github.com/wereii/validate_email"